FIX in double scroll bar

--- a/src/app/shared/components/footer/footer.component.css
+++ b/src/app/shared/components/footer/footer.component.css
@@ -1,3 +1,8 @@
+* {
+  overflow-x:hidden;
+  overflow-y:hidden;
+}
+
 footer i {
   padding: 15px;
 }
